--- a/styles/pantunes.css
+++ b/styles/pantunes.css
@@ -1,13 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&family=Space+Grotesk:wght@300;400;500;600;700&display=swap");
-* {
-  margin: 0;
-  box-sizing: border-box;
-}
+@import url("base.css");
 
-body {
-  font-family: "Space Grotesk", sans-serif;
+/* body {
   background-color: #0a0a0a;
-}
+} */
 
 .nav-bar {
   display: flex;
@@ -17,7 +12,9 @@ body {
   height: 5rem;
   padding: 1rem 8rem;
 }
-
+.nav-link {
+  text-decoration: none;
+}
 .nav-title {
   font-weight: 700;
   font-size: 2rem;
@@ -79,6 +76,7 @@ body {
   color: #0a0a0a;
   font-weight: 700;
   font-size: 1.125rem;
+  border: none;
 }
 
 .slider-div {
