--- a/styles/signin.css
+++ b/styles/signin.css
@@ -1,14 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&family=Space+Grotesk:wght@300;400;500;600;700&display=swap");
-* {
-  margin: 0;
-  box-sizing: border-box;
-}
+@import url("base.css");
 
 body {
   display: flex;
   flex-direction: column;
-  background-color: #0e0e0e;
-  font-family: "Space Grotesk", sans-serif;
   height: 100vh;
 }
 .nav-bar {
@@ -24,6 +18,9 @@ body {
   font-weight: 700;
   font-size: 2rem;
   color: #ff8a2e;
+}
+.nav-link {
+  text-decoration: none;
 }
 .main-container {
   display: flex;
