--- a/styles/home.css
+++ b/styles/home.css
@@ -1,4 +1,16 @@
 @import url("base.css");
+body {
+  background-color: #0a0a0a;
+  height: 100vh;
+}
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100vh;
+  width: 100vw;
+  background-color: beige;
+}
 nav {
   display: flex;
   background: #2e2e2e;
@@ -6,6 +18,7 @@ nav {
   justify-content: space-between;
   align-items: center;
   padding: 1rem 4rem;
+  height: 88px;
 }
 h1 {
   font-weight: 700;
@@ -14,6 +27,16 @@ h1 {
 }
 a {
   text-decoration: none;
+}
+.icons-div {
+  display: flex;
+  align-items: center;
+  gap: 24px;
+}
+.action-icons {
+  display: flex;
+  align-items: center;
+  gap: 16px;
 }
 input[type="Search"] {
   padding-left: 1rem;
@@ -38,3 +61,141 @@ input[type="Search"]::placeholder {
   background-size: 18px 18px;
   padding-left: 2.1875rem;
 }
+.profile-image img {
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+}
+.content-container {
+  display: flex;
+  justify-content: space-between;
+  height: 100%;
+}
+.side-bar {
+  width: 304px;
+  height: 100%;
+  background: linear-gradient(
+    to right,
+    var(--deep-gray) 0%,
+    var(--deep-gray) 23.68%,
+    var(--gray) 23.68%,
+    var(--gray) 100%
+  );
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  padding-top: 24px;
+}
+.side-bar a {
+  display: flex;
+}
+.side-icons {
+  background-color: #2e2e2e;
+  height: 32px;
+  width: 32px;
+  border-radius: 4px;
+  padding: 7.75px 7.26px;
+  display: flex;
+  align-items: center;
+  margin-left: 24px;
+}
+.links-container {
+  width: 200px;
+  height: 51px;
+  display: flex;
+  align-items: center;
+  padding-bottom: 16px;
+  border-radius: 0px 8px 8px 0px;
+}
+.side-container {
+  display: flex;
+}
+.side-one {
+  width: 72px;
+  display: flex;
+  flex-direction: column;
+}
+#active-icon {
+  background: #ff8a2e;
+  height: 32px;
+  width: 32px;
+  border-radius: 4px;
+  padding: 7.75px 7.26px;
+  margin-top: 10px;
+  margin-left: 24px;
+}
+#active-para-div {
+  background-color: #0a0a0a;
+  padding-top: 10px;
+}
+.links-container a {
+  padding-left: 24px;
+  /* padding-top: 16px;
+  padding-bottom: 16px; */
+}
+.side-bar-para {
+  font-weight: 500;
+  color: #ffffff;
+}
+#active-para-div {
+  background-color: #0a0a0a;
+}
+#active-side-para {
+  color: #ff8a2e;
+}
+/* .side-small {
+  width: 72px;
+  background-color: #0a0a0a;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 35px;
+  padding-top: 34px;
+}
+.side-big {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  padding-top: 34px;
+  align-items: center;
+  color: #ffffff;
+}
+.links-container a {
+  padding-left: 24px;
+}
+.links-container {
+  width: 200px;
+  height: 51px;
+  display: flex;
+  align-items: center;
+  padding-bottom: 16px;
+  border-radius: 0px 8px 8px 0px;
+}
+.side-bar-para {
+  font-weight: 500;
+  color: #ffffff;
+}
+#active-para-div {
+  background-color: #0a0a0a;
+}
+#active-side-para {
+  color: #ff8a2e;
+}
+.side-icons {
+  background-color: #2e2e2e;
+  height: 32px;
+  width: 32px;
+  border-radius: 4px;
+  padding: 7.75px 7.26px;
+  display: flex;
+  align-items: center;
+}
+#active-icon {
+  background: #ff8a2e;
+  height: 32px;
+  width: 32px;
+  border-radius: 4px;
+  padding: 7.75px 7.26px;
+  margin-top: 10px;
+} */
